update build & deps to work best with both JDK8 & 9